[metadata]
name = networking-apalmer
version = 0.0.1
author = Adigun Palmer
author_email = adigunpalmer@glintstream.com
description = A small networking package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/apalmer/lrn-networking.git
project_urls =
    Bug Tracker = https://github.com/apalmer/lrn-networking/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src